kustomize/overlays/ghc-advanced/patch-deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghc-example-app
spec:
  template:
    spec:
      containers:
        - name: app
          volumeMounts:
            - name: app-data
              mountPath: /data
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: ghc-example-app-data
