kustomize/overlays/ghc-advanced/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghc-example-app
spec:
  rules:
    - host: advanced.replace-me.dev.gh0stcloud.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghc-example-app
                port:
                  number: 80
  tls:
    - hosts:
        - advanced.replace-me.dev.gh0stcloud.de
      secretName: ghc-example-app-tls
