kustomize/overlays/ghc-advanced/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ghc-example-app-default
  labels:
    app.kubernetes.io/name: ghc-example-app
    app.kubernetes.io/part-of: gh0stcloud-onboarding
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ghc-example-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9898
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector: {}
